--- a/css/estilos.css
+++ b/css/estilos.css
@@ -719,3 +719,43 @@ footer {
   transition: all 0.3s;
   display: flex;
   align-items:
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  z-index: 999;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-box {
+  background: white;
+  padding: 20px;
+  max-width: 900px;
+  width: 90%;
+  border-radius: 12px;
+}
+
+.modal-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+#m-img-principal {
+  width: 100%;
+  border-radius: 8px;
+}
+
+#m-miniaturas img {
+  width: 60px;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.cerrar {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
